src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Coursera For Business</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Launch_Date__c</fullName>
        <label>Actual Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Training__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Admin Training</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asana_Link__c</fullName>
        <label>Asana Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Slug__c</fullName>
        <label>Client Slug</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_discussion__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Content discussion</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Go Live</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Transition_AE_IM__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Internal Transition (AE-IM)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kick_off_meeting_with_client__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Kick off meeting with client</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Launch</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Salesforce_ID__c</fullName>
        <formula>Opportunity__r.Salesforce_Opty_Id_18_Digit__c</formula>
        <label>Opportunity Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Marketing_Requirement_Gathering__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Program Marketing Requirement Gathering</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Testing__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Program Testing</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programs_Specification_Template__c</fullName>
        <defaultValue>&quot;https://docs.google.com/spreadsheets/d/1pW5zAKMoN1n4EL3GGEVqU5DMOGaiulG1u4gJaAIyGnU/edit#gid=2139265451&quot;</defaultValue>
        <inlineHelpText>Template to generate the Programs Specification Form for a case.</inlineHelpText>
        <label>Programs Specification Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Plan_creation__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Project Plan creation</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Build__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Technical Build</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transition_to_AM__c</fullName>
        <globalPicklist>Case_Implementation_Sub_Statuses</globalPicklist>
        <label>Transition to AM</label>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>HImanshu_s_case_view</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Internal_Transition_AE_IM__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Provisioning</value>
        </filters>
        <label>HImanshu&apos;s case view</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Provisioning</fullName>
        <active>true</active>
        <businessProcess>Coursera For Business</businessProcess>
        <label>Provisioning</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Cannot_close_a_case_without_launch_date</fullName>
        <active>true</active>
        <description>An IM cannot close a case without Actual Launch Date for the partner.</description>
        <errorConditionFormula>IF(ISPICKVAL(Status,&apos;Closed&apos;), 
IF(Actual_Launch_Date__c = null,True,False), 
false 
)</errorConditionFormula>
        <errorMessage>Please enter the Actual Launch Date on the Case Record before closing the case. Click &apos;Cancel&apos; and you will be taken back to the previous page where you can input the value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_close_a_case_without_slug_info</fullName>
        <active>true</active>
        <description>IM cannot close a case without Client Slug and Actual Launch Date info.</description>
        <errorConditionFormula>IF(ISPICKVAL(Status,&apos;Closed&apos;),
			IF(Client_Slug__c =&apos;&apos;,True,False),
				false
			)</errorConditionFormula>
        <errorMessage>Please enter the Client Slug on the Case Record before closing the case. Click &apos;Cancel&apos; and you will be taken back to the previous page where you can input the value.</errorMessage>
    </validationRules>
</CustomObject>